--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,7 @@ a {
   min-height: 500px;
   min-width: 700px;
   background-color: transparent;
-  background-image: url("assets/hero1.png");
+  background-image: url("../assets/hero1.png");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -157,7 +157,7 @@ a {
 
 #hero a {
   background-color: transparent;
-  background-image: url("assets/button.png");
+  background-image: url("../assets/button.png");
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
