--- a/css/style.css
+++ b/css/style.css
@@ -205,8 +205,8 @@ a {
     min-width: 550px;
   }
 
-  #hero h4{
-	font-size: 15px;
+  #hero h4 {
+    font-size: 15px;
   }
 }
 
@@ -265,48 +265,78 @@ a {
     cursor: pointer;
   }
 
-  #hero{
-	height: 60vh;
-	width: 100%;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+  #hero {
+    height: 60vh;
+    width: 100%;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    padding-top: 50px;
   }
 
   #hero_texts {
-	height: 60vh;
-	width: 100%;
-	align-items: center;
-	padding: 20px;
-	z-index: 998;
-	background: rgba(255, 255, 255, 0.15); 
+    height: 60vh;
+    width: 100%;
+    align-items: center;
+    padding: 20px;
+    z-index: 998;
+    background: rgba(255, 255, 255, 0.15);
     border-radius: 20px;
   }
 
-  #hero h3, #hero h4, #hero p, #hero a{
-	color: black;
-	opacity: 1;
-	font-weight: 700;
+  #hero h3,
+  #hero h4,
+  #hero p,
+  #hero a {
+    color: black;
+    opacity: 1;
+    font-weight: 700;
   }
 
   #hero_img {
-	width: 100%;
-	height: 70%;
-	position: absolute;
+    width: 90%;
+    height: 60%;
+    position: absolute;
   }
-
 }
 
 /* for mobile screen */
 
-@media (max-width: 580px) {
+@media (max-width: 480px) {
   #navbar {
     width: 230px;
   }
 
+  #hero {
+    height: 40vh;
+  }
+
   #hero_img {
-	width: 85%;
-	height: 60%;
-	position: absolute;
+    width: 85%;
+    height: 30%;
+  }
+
+  #hero_texts {
+    height: 40vh;
+  }
+}
+
+
+@media (max-width: 412px) {
+  #navbar {
+    width: 200px;
+  }
+
+  #hero {
+    height: 35vh;
+  }
+
+  #hero_img {
+    width: 70vw;
+    height: 25%;
+  }
+
+  #hero_texts {
+    height: 35vh;
   }
 }
