--- a/css/style.css
+++ b/css/style.css
@@ -177,6 +177,93 @@ a {
   opacity: 0.7;
 }
 
+
+
+/* Featured_Products */
+
+#featured_products{
+  text-align: center;
+}
+
+#featured_products .product_container {
+  display: flex;
+  justify-content: space-around;
+  gap: 20px;
+  padding-top: 20px;
+  flex-wrap: wrap;
+}
+
+.product {
+  width: 23%;
+  min-width: 250px;
+  padding: 10px 12px;
+  border: 1px solid #cce7d0;
+  border-radius: 25px;
+  margin: 15px 0;
+  box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.02);
+  position: relative;
+}
+
+.product img{
+  width: 100%;
+  border-radius: 20px;
+}
+
+.product:hover {
+  box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.05);
+  transform: scale(1.02, 1.02);
+  transition: 0.3s ease;
+}
+
+.product_container .product .product_description {
+  text-align: start;
+  padding: 10px 0;
+}
+
+.product .product_description span {
+  color: #606063;
+  font-size: 12px;
+}
+
+.product_container .product .product_description h5 {
+  padding-top: 7px;
+  color: #1a1a1a;
+  font-size: 14px;
+  width: 90%;
+}
+
+.product_container .product .product_description h4{
+  padding-top: 7px;
+  font-size: 15px;
+  font-weight: 700;
+  color: #088178;
+}
+
+.product_container .product .product_cart {
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  border-radius: 50px;
+  font-weight: 600;
+  color:#088178;
+  background-color: #e8f6ea;
+  border: 1px solid #cce7d0;
+  position: absolute;
+  right: 20px;
+  bottom: 15px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 /* hero image responsiveness */
 
 @media (max-width: 1332px) {
@@ -206,6 +293,15 @@ a {
 
   #hero a {
     font-size: 19px;
+  }
+}
+
+@media (max-width: 1220px) {
+  .product {
+    width: 30%;
+  }
+  #featured_products {
+    padding: 40px;
   }
 }
 
@@ -255,6 +351,9 @@ a {
 @media (max-width: 965px) {
   #hero_img {
     min-width: 450px;
+  }
+  .product {
+    width: 45%;
   }
 }
 
@@ -354,6 +453,15 @@ a {
   }
   #hero_texts {
     max-height: 350px;
+  }
+  .product {
+    width: 100%;
+    padding: 10px 0px;
+  }
+
+  #featured_products h2 {
+    font-size: 26px;
+    margin-top: 50px;
   }
 }
 
